--- a/add.css
+++ b/add.css
@@ -1,13 +1,11 @@
-.todo-container {
-    height: calc(100% - 80px);
+#todo-container {
+    padding-top: 40px;
     width: 240px;
-    top: 80px;
-    position: absolute;
-    z-index: 1;
-    padding-top: 0px;
+    height: calc(100% - 80px);
     background-color: #B5FFFC;
     padding-left: 10px;
     border-bottom: 0;
+    position: absolute;
 }
 
 .time {
@@ -113,9 +111,10 @@ input[type="color"]::-webkit-color-swatch {
     border: 0;
 }
 
-.topic-container {
+.container {
     position: relative;
-    margin-left: -3px;
+    padding-left: 30px;
+    margin-bottom: 12px;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -123,18 +122,25 @@ input[type="color"]::-webkit-color-swatch {
     user-select: none;
   }
   .asd li{
-    margin-top: 12;
-    margin-bottom: 5px;
-    margin-left: -10;
-    padding-bottom: 5;
+      margin-bottom: 10px;
+
+  }
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
   }
   .checkmark {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     height: 15px;
     width: 15px;
+    background-color: #eee;
     padding: 2px;
+    box-shadow: 3px 3px 5px #aaaaaa;
   }
   /* On mouse-over*/
 .container:hover input ~ .checkmark {
@@ -171,6 +177,5 @@ input[type="color"]::-webkit-color-swatch {
   }
 
   .mentes {
-    margin-top: 90px;
-    margin-left: 85px;
-}
+      margin-top: 30px;
+  }
