--- a/weekly.css
+++ b/weekly.css
@@ -16,14 +16,25 @@ table {
     background-color: #fff;
 }
 
-tr, td {
+td {
     border-right: 2px dotted black;
     width: calc(100% / 7);
     margin-bottom: 0;
+    height: 19%;
+    border-bottom: 0px;
+    text-align: center;
 }
 
-.bottom {
-    border-right: 0;
+td div
+{
+    padding-top: 0;
+    border-radius: 4%;
+    box-shadow: 4px 4px 3px 1px #aaaaaa;
+    margin: 10px auto;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .top {
@@ -45,10 +56,6 @@ th {
     padding-left:10px;
 }
 
-canvas {
-    width: 100%;
-    height: 100%;
-}
 
 .flipping
 {
