--- a/search.css
+++ b/search.css
@@ -101,4 +101,6 @@ body
     width: 200px;
     height: 200px;
     text-align: center;
+    border-radius: 4%;
+    box-shadow: 4px 4px 3px 1px #aaaaaa;
   }
