--- a/today.css
+++ b/today.css
@@ -24,6 +24,18 @@ tr, .right{
     border-right: 0;
 }
 
+.note
+{
+    padding-top: 0;
+    border-radius: 4%;
+    box-shadow: 4px 4px 3px 1px #aaaaaa;
+    margin: 10px auto;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}*/
+
 canvas {
     width: 100%;
     height: 100%;
