--- a/add.css
+++ b/add.css
@@ -28,18 +28,18 @@
     padding: 7px;
     background-color: rgba(255, 255, 255, 0.7);
 }
-.note {
+.note-container {
     width: 300px;
     height: 270px;
     margin-top: 0;
     padding-bottom: 15px;
 }
 
-.note h3{
+.note-container h3{
     text-transform: uppercase;
 }
 
-.note .textBox {
+.note-container .textBox {
     
     height: 206.53px;
     width: 206.54px;
@@ -55,7 +55,7 @@ textarea {
     resize: none;
 }
 
-.note .colorSelect {
+.note-container .colorSelect {
     margin-left: 130px;
 }
 
@@ -109,7 +109,7 @@ input[type="color"]::-webkit-color-swatch {
     border: 1px solid red;
 }
 
-.asd {
+.topic-table {
     border: 0;
 }
 
@@ -122,7 +122,7 @@ input[type="color"]::-webkit-color-swatch {
     -ms-user-select: none;
     user-select: none;
   }
-  .asd li{
+  .topic-container li{
     margin-top: 12;
     margin-bottom: 5px;
     margin-left: -10;
@@ -137,12 +137,12 @@ input[type="color"]::-webkit-color-swatch {
     padding: 2px;
   }
   /* On mouse-over*/
-.container:hover input ~ .checkmark {
+.container1:hover input ~ .checkmark {
     background-color: #FFDEE9;
   }
   
   /* When the checkbox is checked*/
-  .container input:checked ~ .checkmark {
+  .container1 input:checked ~ .checkmark {
     background-color: #000;
   }
   
@@ -154,12 +154,12 @@ input[type="color"]::-webkit-color-swatch {
   }
   
   /* Show the checkmark when checked */
-  .container input:checked ~ .checkmark:after {
+  .container1 input:checked ~ .checkmark:after {
     display: block;
   }
   
   /* Style the checkmark*/
-  .container .checkmark:after {
+  .container1 .checkmark:after {
     left: 5px;
     width: 5px;
     height: 10px;
